[package]
name = "surrealdb-sql"
publish = true
readme = "README.md"
documentation = "https://docs.rs/surrealdb-sql/"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
license-file.workspace = true

[features]

arbitrary = [
    "dep:arbitrary",
    "dep:regex-syntax",
    "regex-syntax/arbitrary",
    "rust_decimal/rust-fuzz",
    "geo-types/arbitrary",
    "uuid/arbitrary",
]

[dependencies]
surrealdb-common.workspace = true

arbitrary = { workspace = true, features = ["derive"], optional = true }
regex-syntax = { workspace = true, optional = true }
revision = { workspace = true, features = [
    "chrono",
    "geo",
    "roaring",
    "regex",
    "rust_decimal",
    "uuid",
] }
rust_decimal = { workspace = true, features = ["maths", "serde-str"] }
geo-types.workspace = true
uuid = { workspace = true, features = ["serde", "js", "v4", "v7"] }
