[package]
name = "surrealdb-types"
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true
version.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
chrono = { workspace = true, features = ["serde"] }
flatbuffers.workspace = true
geo = { workspace = true, features = ["use-serde"] }
rstest.workspace = true
rust_decimal.workspace = true
serde = { workspace = true, features = ["derive"] }

# WASM DEPENDENCY CONFIGURATION
[target.'cfg(target_family = "wasm")'.dependencies]
surrealdb-protocol = { workspace = true, features = ["proto", "flatbuffers"] }
uuid = { workspace = true, features = ["serde", "v4", "v7", "js"] }

# NON-WASM DEPENDENCY CONFIGURATION
[target.'cfg(not(target_family = "wasm"))'.dependencies]
surrealdb-protocol = { workspace = true, features = ["proto", "flatbuffers", "rpc"] }
uuid = { workspace = true, features = ["serde", "v4", "v7"] }

[lints]
workspace = true
