[package]
name = "surrealdb-types-derive"
version.workspace = true
publish.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
surrealdb-types.workspace = true
