[package]
name = "surrealdb-types"
version.workspace = true
publish = true
readme = "README.md"
documentation = "https://docs.rs/surrealdb-types/"
authors.workspace = true
edition.workspace = true
license-file.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
js = ["dep:js"]
arbitrary = [
    "dep:arbitrary",
    "dep:regex-syntax",
    "regex-syntax/arbitrary",
    "rust_decimal/rust-fuzz",
    "dep:geo-types",
    "geo-types/arbitrary",
    "uuid/arbitrary",
    "chrono/arbitrary",
]

[dependencies]
anyhow.workspace = true
arbitrary = { workspace = true, features = ["derive"], optional = true }
bytes.workspace = true
chrono = { workspace = true, features = ["serde"] }
flatbuffers.workspace = true
geo = { workspace = true, features = ["use-serde"] }
geo-types = { workspace = true, optional = true }
hex.workspace = true
http.workspace = true
js = { workspace = true, optional = true }
nanoid.workspace = true
regex.workspace = true
# Used for generating random regexes for fuzzing with arbitrary
regex-syntax = { workspace = true, optional = true }
rstest.workspace = true
rust_decimal.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
surrealdb-protocol = { workspace = true, features = ["flatbuffers"] }
surrealdb-types-derive.workspace = true
ulid.workspace = true

# WASM DEPENDENCY CONFIGURATION
[target.'cfg(target_family = "wasm")'.dependencies]
uuid = { workspace = true, features = ["serde", "v4", "v7", "js"] }

# NON-WASM DEPENDENCY CONFIGURATION
[target.'cfg(not(target_family = "wasm"))'.dependencies]
uuid = { workspace = true, features = ["serde", "v4", "v7"] }

[dev-dependencies]
serde_json = { workspace = true }

[package.metadata.cargo-machete]
# geo-types and js are optional dependencies tied to features
ignored = ["geo-types", "js"]

[lints]
workspace = true
