[package]
name = "surrealdb-ast"
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true
version.workspace = true
#rust-version.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
common.workspace = true

chrono.workspace = true
rust_decimal.workspace = true
uuid.workspace = true

[lints]
workspace = true

[features]
visualize = []
