[package]
name = "surrealdb-cfg"
publish = true
readme = "README.md"
documentation = "https://docs.rs/surrealdb-cfg/"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
license-file.workspace = true

[features]
default = []
cli = ["dep:clap"]
kv-rocksdb = ["dep:sysinfo", "dep:num_cpus"]
kv-surrealkv = ["dep:sysinfo", "dep:num_cpus"]
kv-tikv = []

[dependencies]
clap = { workspace = true, features = ["derive", "env"], optional = true }
num_cpus = { workspace = true, optional = true }
sysinfo = { workspace = true, optional = true }

[lints]
workspace = true
